--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,16 +6,20 @@ spring:
       username: ictuser
       password: gksghk12!
       pool-name: cp_my
+  servlet:
+    session:
+      timeout: 30m
+      tracking-modes: cookie
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 server:
   port: 9002
   error:
     whitelabel:
       enabled: false
-  servlet:
-    session:
-      timeout: 30m
-      tracking-modes: cookie
+
 
 
 logging:
