--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 server:
   port: 9002
   error:
@@ -21,6 +24,11 @@ server:
   servlet:
     session:
       tracking-modes: cookie
+
+springfox:
+  documentation:
+    swagger:
+      use-model-v3: false
 
 logging:
   level:
