--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       username: ictuser
       password: gksghk12!
       pool-name: cp_my
+      maximum-pool-size: 40
   servlet:
     session:
       timeout: 30m
