--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
       username: ictuser
       password: gksghk12!
       pool-name: cp_my
-      maximum-pool-size: 40
+      maximum-pool-size: 20
+      max-lifetime: 26000
   servlet:
     session:
       timeout: 30m
