--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,12 @@
 
 name: Java CI with Maven
 
+env:
+  AWS_REGION: ap-northeast-2
+  S3_BUCKET_NAME: le-cl-bucket
+  CODE_DEPLOY_APPLICATION_NAME: le-cl-app
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: le-cl-group
+  
 on:
   push:
     branches: [ "master" ]
@@ -24,3 +30,22 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Configure AWS Credentials
+      # You may pin to the exact commit or the version.
+      # uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        # AWS Access Key ID
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        # AWS Secret Access Key
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        # AWS Region, e.g. us-east-2
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: upload to S3
+      run: |
+        aws deploy push \
+          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+          --ignore-hidden-files \
+          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
+          --source .
+        
