--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source:  /target
-    destination: /home/ubuntu/app
+    destination: /home/ubuntu/app/temp
     overwrite: yes
 
 permissions:
