--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   datasource:
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://43.200.138.19:3306/ict?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      jdbc-url: jdbc:mysql://13.125.18.81:3306/ict?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      #jdbc-url: jdbc:mysql://43.200.138.19:3306/ict?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
       #jdbc-url: jdbc:mysql://3.37.139.180:3306/ict?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
       username: ictuser
       password: gksghk12!
