--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -103,5 +103,5 @@ jobs:
 #         aws deploy create-deployment \
 #           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
 #           --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-          --s3-location bucket=$S3_BUCKET_NAME,key=BE/BE-$GITHUB_SHA.zip,bundleType=zip
+          # --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
+          # --s3-location bucket=$S3_BUCKET_NAME,key=BE/BE-$GITHUB_SHA.zip,bundleType=zip
