maven.yml에서 원격 SSH 실행 관련 설정 주석 처리

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,15 +26,15 @@ jobs:
       - uses: actions/checkout@v3.3.0
 
       - name: execute remote ssh
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.REMOTE_IP }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.REMOTE_IDENTITYFILE }}
-          port: ${{ secrets.REMOTE_PORT }}
-          script: |
-            whoami
-            ls -al
+        # uses: appleboy/ssh-action@master
+        # with:
+        #   host: ${{ secrets.REMOTE_IP }}
+        #   username: ${{ secrets.REMOTE_USER }}
+        #   key: ${{ secrets.REMOTE_IDENTITYFILE }}
+        #   port: ${{ secrets.REMOTE_PORT }}
+        #   script: |
+        #     whoami
+        #     ls -al
 
     # steps:
     # - uses: actions/checkout@v4
