--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,21 +11,21 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3.3.0
+#     steps:
+#       - uses: actions/checkout@v3.3.0
 
-      - name: execute remote ssh
+#       - name: execute remote ssh
         # uses: appleboy/ssh-action@master
         # with:
         #   host: ${{ secrets.REMOTE_IP }}
